# graph-runner

./: Cargo.toml  README.md  flake.nix  shell.nix
.zed/: debug.json  tasks.json
assets/models/: models.glb  models.gltf
assets/sources/: .gitignore
docs/: .gitignore  Checklist.md  Mechanics.md  Script.md  Setting.md  Story.md
docs/.obsidian/: hotkeys.json
src/: animation.rs  camera.rs  controller.rs  game.rs  input.rs  inspector.rs  lighting.rs  loading.rs  main.rs  markers.rs  mood.rs  scene.rs  splash.rs  state.rs
src/controller/: functions.rs  math.rs  mod.rs  params.rs  systems.rs
