[package]
name = "graph-runner"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.5"
bevy = { version = "0.18", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.36"
bevy-midi-graph = { git = "https://github.com/grimace87/bevy-midi-graph.git", rev = "0e5f3afb4db07f03f57b65a7d1d9139f6372c58b" }
bevy_skein = "0.5"
